--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,12 +11,16 @@ dependencies:
   dio: ^4.0.0
   flutter_map: ^0.13.1
   flutter_typeahead: ^3.2.0
+  freezed_annotation: ^0.14.3
   provider: ^5.0.0
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
+  build_runner: ^2.0.6
   flutter_lints: ^1.0.0
+  freezed: ^0.14.3
+  json_serializable: ^5.0.0
 
 flutter:
   uses-material-design: true
