--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -9,6 +9,7 @@ dependencies:
   flutter:
     sdk: flutter
   dio: ^4.0.0
+  file: ^6.1.2
   flutter_map: ^0.13.1
   flutter_typeahead: ^3.2.0
   freezed_annotation: ^0.14.3
@@ -24,3 +25,5 @@ dev_dependencies:
 
 flutter:
   uses-material-design: true
+  assets:
+    - assets/
