--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,6 +13,8 @@ dependencies:
   flutter_map: ^0.13.1
   flutter_typeahead: ^3.2.0
   freezed_annotation: ^0.14.3
+  geocoder_offline: ^0.2.0
+  latlong2: ^0.8.0
   provider: ^5.0.0
 
 dev_dependencies:
